[tool.poetry]
name = "dot-files"
version = "0.1.0"
description = "Tim's personal dot files"
authors = ["Tim Oram <dev@mitmaro.ca>"]
license = "ISC"

[tool.poetry.dependencies]
python = "^3.7"
distro = "^1.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
